# mousefood-benchmark

./: .gitignore  Cargo.toml  README.md  deploy.sh  sdkconfig.defaults
.cargo/: config.toml
src/: benchmark.rs  catpuccin.rs  compute.rs  embedded_str.rs  fps.rs  gauge.rs  glyph_mapping.rs  header.rs  lorem.rs  main.rs  nonsense.rs  stats.rs  string_ops.rs  worm_buffer.rs
