[package]
name = "mousefood-benchmark"
version = "0.1.0"
authors = []
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "mousefood-benchmark"
path = "src/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = 3

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mipidsi = "0.9.0"
compact_str = { version = "0.9.0", default-features = false }
#mousefood = { path = "../mousefood/mousefood", default-features = false, features = ["fonts"] }
mousefood = { git = "https://github.com/j-g00da/mousefood", default-features = false, package = "mousefood" }
ratatui = { version = "0.30.0-alpha.5", default-features = false, features = ["layout-cache"] }
tachyonfx = { git = "https://github.com/junkdog/tachyonfx", branch = "ratatui-0.30-preview", default-features = false }
embedded-graphics = "0.8.1"
embedded-graphics-unicodefonts = { git = "https://github.com/junkdog/embedded-graphics-unicodefonts", branch = "atlas" }

[build-dependencies]
embuild = "0.33"


[patch.crates-io]
